Added content to index html

--- a/index.html
+++ b/index.html
@@ -4,8 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>15.2</title>
+    <link rel="stylesheet" href="mycss/style.css">
 </head>
 <body>
-    <p>Test Test</p>
+    <header>
+        <h1>Welcome to Hot Beans Web</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>|
+                <li><a href="trainees.html">Trainee Profiles</a></li>|
+                <li><a href="jobs.html">Jobs</a></li>|
+                <li><a href="apply.html">Apply</a></li>|
+                <li><a href="courses.html">Courses</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>Who are We?</h2>
+            <p>
+                Hot Beans Web is a creative a friendly web development agency that builds moder, responsive websites for clients all over the world.
+            </p>
+        </section>
+
+        <section>
+            <h2>Join Our Team!</h2>
+            <p>
+                We're currently hiring new trainee developers. Explore our job listings and send us your application today!
+            </p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 Hot Beans Web</p>
+    </footer>
 </body>
 </html>
