finished index.html, added to css

--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>15.2</title>
+    <title>Hot Beans Home Page</title>
     <link rel="stylesheet" href="mycss/style.css">
 </head>
 <body>
     <header>
         <h1>Welcome to Hot Beans Web</h1>
-        <nav>
+        <nav role="navigation" aria-label="Main Menu">
             <ul>
-                <li><a href="index.html">Home</a></li>|
-                <li><a href="trainees.html">Trainee Profiles</a></li>|
-                <li><a href="jobs.html">Jobs</a></li>|
-                <li><a href="apply.html">Apply</a></li>|
-                <li><a href="courses.html">Courses</a></li>
+                <li><a href="index.html" class="btn">Home</a></li>
+                <li><a href="trainees.html" class="btn">Trainee Profiles</a></li>
+                <li><a href="jobs.html" class="btn">Jobs</a></li>
+                <li><a href="apply.html" class="btn">Apply</a></li>
+                <li><a href="courses.html" class="btn">Courses</a></li>
             </ul>
         </nav>
     </header>
@@ -23,7 +23,7 @@
         <section>
             <h2>Who are We?</h2>
             <p>
-                Hot Beans Web is a creative a friendly web development agency that builds moder, responsive websites for clients all over the world.
+                Hot Beans Web is a creative and friendly web development agency that builds modern, responsive websites.
             </p>
         </section>
 
