added images of trainees and created trainees page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section>
             <h2>Join Our Team!</h2>
             <p>
-                We're currently hiring new trainee developers. Explore our job listings and send us your application today!
+                We're currently hiring new trainee developers. Explore our job listings and <a href="apply.html">send us your application today!</a>
             </p>
         </section>
     </main>
