--- a/trainees.html
+++ b/trainees.html
@@ -1,11 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hot Beans Trainees</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Trainee Profiles - Hot Beans Web</title>
+  <link rel="stylesheet" href="mycss/style.css" />
 </head>
 <body>
-    
+  <header>
+    <h1>Meet Our Trainees</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html" class="btn">Home</a></li>
+        <li><a href="trainees.html" class="btn">Trainee Profiles</a></li>
+        <li><a href="jobs.html" class="btn">Jobs</a></li>
+        <li><a href="apply.html" class="btn">Apply</a></li>
+        <li><a href="courses.html" class="btn">Courses</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <div class="company_trainees">
+        <h2>Profiles of Existing Trainee Web Developers</h2>
+      <ul>
+        <li class="greg">
+          <img src="images/greg.jpg" alt="Photo of Greg" width="100" height="80" /><br/>
+          <strong>Greg</strong><br />
+          Enthusiastic coder who enjoys learning new frameworks.
+        </li>
+        <li class="kamil">
+          <img src="images/kamil.jpg" alt="Photo of Kamil" width="100" height="80" /><br/>
+          <strong>Kamil</strong><br />
+          Skilled in front-end and CSS animations.
+        </li>
+        <li class="gabe">
+          <img src="images/mewing.jpg" alt="Photo of Gabe" width="100" height="80" /><br/>
+          <strong>Gabe</strong><br />
+          Back-end wizard with a love for clean code.
+        </li>
+        <li class="simon">
+          <img src="images/simon.jpg" alt="Photo of Simon" width="100" height="80" /><br/>
+          <strong>Simon</strong><br />
+          Great with UX and passionate about accessibility.
+        </li>
+        <li class="declan">
+          <img src="images/declan.jpg" alt="Photo of Declan" width="100" height="80" /><br/>
+          <strong>Declan</strong><br />
+          Keen on JavaScript and building cool web apps.
+        </li>
+      </ul>
+    </div>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Hot Beans Web</p>
+  </footer>
 </body>
 </html>
